#2 Fix layout by adding space between view button and download invoice button in My Account page, which previously stuck together;

--- a/wp-content/themes/jv-allinone-child/style.css
+++ b/wp-content/themes/jv-allinone-child/style.css
@@ -36,3 +36,6 @@ Text Domain: Allinone
 .panel_cart_totals table td {
     padding: 10px 0px 0px 10px;
 }
+.btn.btn-xs.invoice{
+	margin-left:10px;
+}
